--- a/assets/style.css
+++ b/assets/style.css
@@ -16,8 +16,9 @@ h1{
 }
 
 h2{
-    font-size: clamp(3rem,3vw,4rem);
+    font-size: clamp(1.5rem,2.5vw,3rem);
     text-align: center;
+    margin-bottom: 1.5vw;
 }
 
 h3{
