--- a/assets/style.css
+++ b/assets/style.css
@@ -83,9 +83,9 @@ article div:nth-of-type(2){
 
 
 form{
-    border-top: 5px double black;
-    border-left: 5px double black;
-    border-right: 5px double black;
+    border-top: 5px groove black;
+    border-left: 5px groove black;
+    border-right: 5px groove black;
     padding: 2vw;
     background-color: #FFD166;
     border-radius: 50px 50px 0 0;
@@ -95,9 +95,9 @@ form{
 section{
     background-color: #d6bfff;
     min-height: 30vh;
-    border-bottom: 5px double black;
-    border-left: 5px double black;
-    border-right: 5px double black;
+    border-bottom: 5px groove black;
+    border-left: 5px groove black;
+    border-right: 5px groove black;
     padding: 2vw;
     border-radius: 0 0 50px 50px;
 }
@@ -112,6 +112,8 @@ form{
 }
 
   
+
+/* Based on https://codepen.io/fractalsolutions/pen/pojGapQ */
   /* Lever styles */
   .lever-control {
     position: absolute;
